# cryostat-thermal-models

./: .gitignore  README.md  pyproject.toml  setup.md
examples/: example_thermal_model.ipynb  example_thermal_model_3stage.ipynb  example_thermal_model_3stage_fridge.ipynb  example_thermal_model_3stage_fridge_heater_stage.ipynb  example_thermal_model_4stage.ipynb  sample_model.ipynb  stirling_cooler.ipynb  thermal_conductivity.ipynb
models/: test_cryostat_model_params.txt
src/cryotherm/: __init__.py  conduction.py  fridge.py  material_db.py  radiation.py  sizing.py  solver.py  stage.py  utils.py  visualize.py
src/cryotherm/data/: Al6061.json  CuRRR100.json  CuRRR150.json  CuRRR50.json  G10norm.json  G10warp.json  Kapton.json  SS304L.json  manganin.json  table_example.json
src/cryotherm/data/fridges/: CryotelGT.csv
src/cryotherm/data/raw/: Manganin.csv
