[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]                                  # PEP 621 metadata
name = "cryostat-thermal-models"           # distribution / PyPI name
version = "0.1.0"
description = "Modular cryostat thermal-analysis toolkit"
readme = "README.md"
requires-python = ">=3.9"
#license = {file = "LICENSE"}
authors = [{name = "Nate Lourie", email = "nlourie@mit.edu"}]
keywords = ["cryostat", "thermal", "model", "heat-transfer"]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
  "ipykernel",
  "astropy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
]

[tool.setuptools]                          # setuputils-specific conf
package-dir = {"" = "src"}                 # src-layout
packages = ["cryotherm"]                   # explicitly list or use find-namespace
