[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryostat-thermal-models"
version = "0.1.0"
description = "Modular cryostat thermal-analysis toolkit"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Nate Lourie", email = "nlourie@mit.edu"}]
keywords = ["cryostat", "thermal", "model", "heat-transfer"]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
  "ipykernel",
  "astropy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cryotherm" = [
    "data/*.json",
    "data/**/*.json",
    "data/*.csv",
    "data/**/*.csv",
    "data/*.png",
    "data/**/*.png",
    "data/*.pdf",
    "data/**/*.pdf",
]
